Fixed spacing on main container

--- a/_sass/minima/pages/tablegenerator.scss
+++ b/_sass/minima/pages/tablegenerator.scss
@@ -5,6 +5,8 @@ $grayish: rgb(239, 239, 239);
     flex-direction: row;
     width: 85vw;
     margin: auto;
+    height: 40vw;
+    margin-bottom: 5vw;
 
     .text-container {
         display: flex;
